k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api
  namespace: user-api
  labels:
    app: user-api
spec:
  type: ClusterIP
  selector:
    app: user-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
